k8s-apps/alb-ingress/3-app/3-ingress.yaml
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: 7-example
  annotations:
    # Create certificate manually from cert manager under the name "ex7.almahrizi.net"
    # No TLS section as tls will be terminated outside EKS cluster at the ALB level
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:058264202072:certificate/8b66a718-e364-43cc-b9cd-c05d2690a0db
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - host: ex7.almahrizi.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
